bug 139466: paste can create nested headers.  r=harish; sr=jst